[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemigos/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://EnemigoEscupeConCurva.gd" type="Script" id=4]
[ext_resource path="res://UI/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shaders/Blink.shader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/active = false

[sub_resource type="Animation" id=2]
resource_name = "BlinkAnimationEnemigoEscupe"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "StopBlinkAnimationEnemigoEscupe"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="EnemigoEscupeConCurva" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 1 )]

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/BlinkAnimationEnemigoEscupe = SubResource( 2 )
anims/StopBlinkAnimationEnemigoEscupe = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_distance = 400.0
bus = "Sonido"
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
